logs/validate.20260402-083145.log
error: expected `,`
   --> src/Chap52/AdjTableGraphMtPer.rs:691:59
    |
691 |                 assert(self.num_edges as nat < usize::MAX as nat);
    |                                                           ^^

error[E0425]: cannot find type `AdjTableGraphMtPer` in this scope
   --> src/Chap52/AdjTableGraphMtPer.rs:920:70
    |
920 |     impl<V: StTInMtT + Ord + TotalOrder + Clone + 'static> Clone for AdjTableGraphMtPer<V> {
    |                                                                      ^^^^^^^^^^^^^^^^^^ not found in this scope

error[E0422]: cannot find struct, variant or union type `AdjTableGraphMtPer` in this scope
   --> src/Chap52/AdjTableGraphMtPer.rs:922:13
    |
922 |             AdjTableGraphMtPer { adj: self.adj.clone(), num_edges: self.num_edges }
    |             ^^^^^^^^^^^^^^^^^^ not found in this scope

error: aborting due to 3 previous errors

Some errors have detailed explanations: E0422, E0425.
For more information about an error, try `rustc --explain E0422`.
Elapsed: 6s
Sampled Memory Usage: peak rust_verify RSS: 297MB, peak z3 RSS: 0MB, min free: 23527MB
Sampled CPU Usage: rust_verify: 4s, z3 children: 0s
